--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ yarn-error.log*
 build/
 dist/
 lib/
+.next/
+out/
 
 # Environment variables
 .env
@@ -21,14 +23,20 @@ lib/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS files
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
 # Runtime data
 pids
@@ -38,8 +46,6 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
-
-# nyc test coverage
 .nyc_output
 
 # Dependency directories
@@ -47,6 +53,7 @@ jspm_packages/
 
 # Optional npm cache directory
 .npm
+.eslintcache
 
 # Optional REPL history
 .node_repl_history
@@ -67,6 +74,39 @@ jspm_packages/
 # Temporary files
 tmp/
 temp/
+.tmp/
 
 # Skaffold
-.skaffold/ 
+.skaffold/
+
+# Secrets and sensitive files
+infra/shared/secrets.yaml
+**/secrets.yaml
+**/secrets.yml
+**/*.key
+**/*.pem
+**/*.p12
+**/*.pfx
+
+# API Keys and tokens
+**/api-keys.json
+**/tokens.json
+**/credentials.json
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Cache directories
+.cache/
+.parcel-cache/
+
+# TypeScript
+*.tsbuildinfo
+
+# Prisma
+prisma/migrations/
+
+# Local development
+.local/
