--- a/ai-processor/package.json
+++ b/ai-processor/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.53.0",
-    "@liranmazor/ticketing-common": "^3.0.40",
+    "@liranmazor/common": "^1.0.8",
     "@types/redis": "^4.0.10",
     "node-nats-streaming": "^0.3.2",
     "redis": "^5.5.6",
