--- a/auth/package.json
+++ b/auth/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@liranmazor/ticketing-common": "^3.0.44",
+    "@liranmazor/common": "^1.0.1",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
