--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "next": "^15.3.1",
