--- a/infra/quizzes/quizzes-depl.yaml
+++ b/infra/quizzes/quizzes-depl.yaml
@@ -16,12 +16,17 @@ spec:
         - name: quizzes
           image: liran1789/quizzes
           env:
+            - name: DATABASE_URL
+              value: 'postgresql://pudding:asdf@quizzes-postgres-srv:5432/quizzes'
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-secret
+                  key: POSTGRES_PASSWORD
             - name: NATS_CLIENT_ID
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name 
-            - name: MONGO_URI
-              value: 'mongodb://quizzes-mongo-srv:27017/quizzes'
             - name: NATS_URL
               value: 'http://nats-srv:4222'
             - name: NATS_CLUSTER_ID
@@ -33,6 +38,14 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+          ports:
+            - containerPort: 3000
+          readinessProbe:
+            httpGet:
+              path: /api/quizzes/health
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
