--- a/infra/shared/ingress-srv.yaml
+++ b/infra/shared/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: worksheeter.com
+    - host: worksheeter.dev
       http:
         paths:
           - path: /api/auth/users/?(.*)
@@ -29,6 +29,20 @@ spec:
             backend:
               service:
                 name: quizzes-srv
+                port:
+                  number: 3000
+          - path: /api/insights/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: insights-srv
+                port:
+                  number: 3000
+          - path: /api/code-executor/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: code-executor-srv
                 port:
                   number: 3000
           - path: /?(.*)
