--- a/infra/shared/nats-depl.yaml
+++ b/infra/shared/nats-depl.yaml
@@ -40,7 +40,7 @@ spec:
   selector:
     app: nats
   ports:
-    - name: client
+    - name: nats
       protocol: TCP
       port: 4222
       targetPort: 4222
