--- a/infra/worksheets/worksheets-depl.yaml
+++ b/infra/worksheets/worksheets-depl.yaml
@@ -16,12 +16,12 @@ spec:
         - name: worksheets
           image: liran1789/worksheets
           env:
+            - name: MONGO_URI
+              value: 'mongodb://worksheets-mongo-srv:27017/worksheets'
             - name: NATS_CLIENT_ID
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name 
-            - name: MONGO_URI
-              value: 'mongodb://worksheets-mongo-srv:27017/worksheets'
             - name: NATS_URL
               value: 'http://nats-srv:4222'
             - name: NATS_CLUSTER_ID
@@ -33,6 +33,14 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+          ports:
+            - containerPort: 3000
+          readinessProbe:
+            httpGet:
+              path: /api/worksheets/health
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
