--- a/quizzes/Dockerfile
+++ b/quizzes/Dockerfile
@@ -1,8 +1,13 @@
 FROM node:alpine
 
 WORKDIR /app
-COPY package.json .
+
+COPY package*.json ./
+
+COPY prisma ./prisma/
+
 RUN npm install --omit=dev
+
 COPY . .
 
 CMD ["npm", "start"]
