--- a/quizzes/package.json
+++ b/quizzes/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "worksheets",
+  "name": "quizzes",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "postinstall": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@liranmazor/ticketing-common": "^3.0.41",
+    "@liranmazor/common": "^1.0.2",
+    "@prisma/client": "^6.10.1",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
@@ -18,10 +20,10 @@
     "cookie-session": "^2.1.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
-    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "prisma": "^6.10.1",
     "redis": "^5.5.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
