--- a/worksheets/package.json
+++ b/worksheets/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@liranmazor/ticketing-common": "^3.0.38",
+    "@liranmazor/common": "^1.0.1",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
@@ -18,6 +18,7 @@
     "cookie-session": "^2.1.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "mongoose-update-if-current": "^1.4.0",
