--- a/coding/package.json
+++ b/coding/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "insights",
+  "name": "coding",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@liranmazor/common": "^1.0.8",
+    "@liranmazor/common": "^1.0.12",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
