--- a/insights/Dockerfile
+++ b/insights/Dockerfile
@@ -2,9 +2,13 @@ FROM node:alpine
 
 WORKDIR /app
 
-COPY package.json .
+COPY package*.json ./
+
+COPY prisma ./prisma/
 
 RUN npm install --omit=dev
+
+RUN npx prisma generate
 
 COPY . .
 
