--- a/insights/package.json
+++ b/insights/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "weekly-digest": "ts-node-dev src/jobs/weekly-teacher-digest.ts" 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@liranmazor/common": "^1.0.15",
+    "@liranmazor/common": "^1.0.19",
+    "@prisma/client": "^6.10.1",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
@@ -21,6 +23,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "node-nats-streaming": "^0.3.2",
+    "prisma": "^6.10.1",
     "redis": "^5.5.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
